--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -61,6 +61,36 @@ scripts:
     title: Density of the gas heated by SNII
     section: Density distributions
     output_file: SNII_density_distribution.png
+  - filename: scripts/metallicity_evolution.py
+    caption: Evolution of the metal mass in gas and stars per unit co-moving volume.
+    output_file: metallicity_evolution.png
+    section: Metal Evolution
+    title: Metal Mass Density Evolution
+  - filename: scripts/bh_metallicity_evolution.py
+    caption: Evolution of the metal mass locked in black holes per unit co-moving volume.
+    output_file: bh_metallicity_evolution.png
+    section: Metal Evolution
+    title: Metal Mass Locked in Black Holes Density Evolution
+  - filename: scripts/bh_accretion_evolution.py
+    caption: Evolution of the accretion rate onto BHs per unit co-moving volume.
+    output_file: bh_accretion_evolution.png
+    section: Black Holes Evolution
+    title: Black Hole Accretion History
+  - filename: scripts/bh_mass_evolution.py
+    caption: Evolution of the BH mass per unit co-moving volume.
+    output_file: bh_mass_evolution.png
+    section: Black Holes Evolution
+    title: Black Hole Mass History
+  - filename: scripts/bh_masses.py
+    caption: Relation between black hole particle (dynamical) masses and subgrid masses. The vertical dashed lines shows the primordial gas particle mass and the horizontal dashed lines corresponds to the black hole seed mass.
+    output_file: bh_masses.png
+    section: Black Holes
+    title: Black Hole Dynanmical and Subgrid Masses
+  - filename: scripts/gas_masses.py
+    caption: Gas Particle Masses with the threshold for splitting indicated by the vertical dashed line.
+    output_file: gas_masses.png
+    section: Histograms
+    title: Gas Particle Masses
   - filename: scripts/max_temperatures.py
     caption: Maximal temperature recorded by gas particles throughout the entire simulation.
     output_file: gas_max_temperatures.png
