fixed plot details, reformatted, and switched to 100Mpc aperture default. Opened an issue on this branch to decide on appropriate aperture for comparison, but 100 Mpc used for now, as 30+ Mpc apertures are largely indistinguishable for COLIBRE runs

--- a/colibre/auto_plotter/gas_fraction_plots.yml
+++ b/colibre/auto_plotter/gas_fraction_plots.yml
@@ -4,10 +4,10 @@ h2_frac_func_stellar_mass:
   selection_mask: "derived_quantities.xcoldgass_sel"
   comment: r"$10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$"
   x:
-    quantity: "apertures.mass_star_30_kpc"
+    quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
     start: 1e9
-    end: 4e11
+    end: 1e12
   y:
     quantity: "derived_quantities.h2_to_stellar_mass"
     units: "Solar_Mass / Solar_Mass"
@@ -15,17 +15,19 @@ h2_frac_func_stellar_mass:
     end: 100
   median:
     plot: true
+    adaptive: true
     log: true
-    number_of_bins: 9
+    number_of_bins: 15
     start:
       value: 1e9
       units: Solar_Mass
     end:
-      value: 4e11
+      value: 1e12
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-H2 Fraction
+    title: Stellar Mass-H$_2$ Fraction
     section: H_2 Fractions
+    caption: Galaxy H_$2$ fraction as a function of stellar mass in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyH2Fractions/Saintonge2017_abcissa_M_star.hdf5
 
@@ -35,7 +37,7 @@ h2_frac_func_ssfr:
   selection_mask: "derived_quantities.xcoldgass_sel"
   comment: r"$10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$"
   x:
-    quantity: "derived_quantities.specific_sfr_gas_30_kpc"
+    quantity: "derived_quantities.specific_sfr_gas_100_kpc"
     units: "1 / Gigayear"
     start: 1e-4
     end: 1e4
@@ -46,8 +48,9 @@ h2_frac_func_ssfr:
     end: 100
   median:
     plot: true
+    adaptive: true
     log: true
-    number_of_bins: 29
+    number_of_bins: 40
     start:
       value: 1e-4
       units: "1 / Gigayear"
@@ -55,8 +58,9 @@ h2_frac_func_ssfr:
       value: 1e4
       units: "1 / Gigayear"
   metadata:
-    title: Stellar Mass-H2 Fraction
+    title: sSFR-H$_2$ Fraction
     section: H_2 Fractions
+    caption: Galaxy H_$2$ fraction as a function of specific star formation rate in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyH2Fractions/Saintonge2017_abcissa_sSFR.hdf5
 
@@ -77,8 +81,9 @@ h2_frac_func_stellar_surface_density:
     end: 100
   median:
     plot: true
+    adaptive: true
     log: true
-    number_of_bins: 9
+    number_of_bins: 25
     start:
       value: 1e5
       units: "Solar_Mass / (kpc**2)"
@@ -86,8 +91,9 @@ h2_frac_func_stellar_surface_density:
       value: 1e11
       units: "Solar_Mass / (kpc**2)"
   metadata:
-    title: Stellar Mass Surface Density-H2 Fraction
-    section: H_2 Fractions
+    title: Stellar Mass Surface Density-H$_2$ Fraction
+    section: H_2 Fraction
+    caption: Galaxy H_$2$ fraction as a function of stellar mass surfaced density in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyH2Fractions/Saintonge2017_abcissa_mu_star.hdf5
 
@@ -97,10 +103,10 @@ hi_frac_func_stellar_mass:
   selection_mask: "derived_quantities.xgass_sel"
   comment: r"$10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$"
   x:
-    quantity: "apertures.mass_star_30_kpc"
+    quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
     start: 1e9
-    end: 4e11
+    end: 1e12
   y:
     quantity: "derived_quantities.hi_to_stellar_mass"
     units: "Solar_Mass / Solar_Mass"
@@ -108,17 +114,19 @@ hi_frac_func_stellar_mass:
     end: 100
   median:
     plot: true
+    adaptive: true
     log: true
-    number_of_bins: 9
+    number_of_bins: 15
     start:
       value: 1e9
       units: Solar_Mass
     end:
-      value: 4e11
+      value: 1e12
       units: Solar_Mass
   metadata:
     title: Stellar Mass-HI Fraction
-    section: H_I Fractions
+    section: HI Fractions
+    caption: Galaxy HI fraction as a function of stellar mass in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyHIFractions/Catinella2018_abcissa_M_star.hdf5
 
@@ -127,7 +135,7 @@ hi_frac_func_ssfr:
   legend_loc: "lower right"
   selection_mask: "derived_quantities.xgass_sel"
   x:
-    quantity: "derived_quantities.specific_sfr_gas_30_kpc"
+    quantity: "derived_quantities.specific_sfr_gas_100_kpc"
     units: "1 / Gigayear"
     start: 1e-4
     end: 1e4
@@ -138,8 +146,9 @@ hi_frac_func_ssfr:
     end: 100
   median:
     plot: true
+    adaptive: true
     log: true
-    number_of_bins: 29
+    number_of_bins: 40
     start:
       value: 1e-4
       units: "1 / Gigayear"
@@ -147,8 +156,9 @@ hi_frac_func_ssfr:
       value: 1e4
       units: "1 / Gigayear"
   metadata:
-    title: Stellar Mass-HI Fraction
-    section: H_I Fractions
+    title: sSFR-HI Fraction
+    section: HI Fractions
+    caption: Galaxy HI fraction as a function of specific star formation rate in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyHIFractions/Catinella2018_abcissa_sSFR.hdf5
 
@@ -168,8 +178,9 @@ hi_frac_func_stellar_surface_density:
     end: 100
   median:
     plot: true
+    adaptive: true
     log: true
-    number_of_bins: 9
+    number_of_bins: 25
     start:
       value: 1e5
       units: "Solar_Mass / (kpc**2)"
@@ -178,6 +189,7 @@ hi_frac_func_stellar_surface_density:
       units: "Solar_Mass / (kpc**2)"
   metadata:
     title: Stellar Mass Surface Density-HI Fraction
-    section: H_I Fractions
+    section: HI Fractions
+    caption: Galaxy HI fraction as a function of stellar mass surface density in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyHIFractions/Catinella2018_abcissa_mu_star.hdf5
