--- a/colibre/auto_plotter/gas_mass_function.yml
+++ b/colibre/auto_plotter/gas_mass_function.yml
@@ -1,12 +1,12 @@
 hi_mass_function:
-  type: "massfunction"
+  type: "adaptivemassfunction"
   legend_loc: "lower left"
-  number_of_bins: 25
+  number_of_bins: 30
   x:
-    quantity: "derived_quantities.neutral_hydrogen_masses"
+    quantity: "derived_quantities.neutral_hydrogen_mass"
     units: Solar_Mass
     start: 1e6
-    end: 4e11
+    end: 1e12
   y:
     units: 1/Mpc**3
     start: 1e-6
@@ -14,18 +14,19 @@ hi_mass_function:
   metadata:
     title: HI Mass Function 
     section: Hydrogen Species Mass Functions
+    caption: 100 kpc aperture Galaxy HI Mass Function, showing all galaxies with a fixed bin-width of 0.2 dex.
   observational_data:   
     - filename: GalaxyHIMassFunction/Jones2018.hdf5
 
 h2_mass_function:
-  type: "massfunction"
+  type: "adaptivemassfunction"
   legend_loc: "lower left"
-  number_of_bins: 25
+  number_of_bins: 30
   x:
-    quantity: "derived_quantities.molecular_hydrogen_masses"
+    quantity: "derived_quantities.molecular_hydrogen_mass"
     units: Solar_Mass
     start: 1e6
-    end: 4e11
+    end: 1e12
   y:
     units: 1/Mpc**3
     start: 1e-6
@@ -33,5 +34,6 @@ h2_mass_function:
   metadata:
     title: H2 Mass Function
     section: Hydrogen Species Mass Functions
+    caption: 100 kpc aperture Galaxy H_$2$ Mass Function, showing all galaxies with a fixed bin-width of 0.2 dex.
   observational_data:
     - filename: GalaxyH2MassFunction/Fletcher2020.hdf5
