Rebase. Fix dust read-in. Make optional mass functions non-adaptive for now, as adaptive mass function does not work with no galaxies within x range.

--- a/colibre/auto_plotter/dust_mass_function.yml
+++ b/colibre/auto_plotter/dust_mass_function.yml
@@ -1,5 +1,5 @@
 dust_mass_function:
-  type: "adaptivemassfunction"
+  type: "massfunction"
   legend_loc: "lower left"
   number_of_bins: 30
   x:
@@ -12,7 +12,9 @@ dust_mass_function:
     start: 1e-6
     end: 0.316 # (1e-0.5)
   metadata:
+    section: Dust Mass Functions
     title: Dust Mass Function
+    caption: 100 kpc aperture Galaxy HI Mass Function, showing all galaxies with a fixed bin-width of 0.2 dex.
   observational_data:
     - filename: GalaxyDustMassFunction/Pozzi2020_z000p100.hdf5
     - filename: GalaxyDustMassFunction/Pozzi2020_z001p800.hdf5
