--- a/colibre/auto_plotter/gas_fraction_plots.yml
+++ b/colibre/auto_plotter/gas_fraction_plots.yml
@@ -26,7 +26,7 @@ h2_frac_func_stellar_mass:
       units: Solar_Mass
   metadata:
     title: Stellar Mass-H$_2$ Fraction
-    section: H_2 Fractions
+    section: Hydrogen Species H_2 Fractions
     caption: Galaxy H_$2$ fraction as a function of stellar mass in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyH2Fractions/Saintonge2017_abcissa_M_star.hdf5
@@ -59,7 +59,7 @@ h2_frac_func_ssfr:
       units: "1 / Gigayear"
   metadata:
     title: sSFR-H$_2$ Fraction
-    section: H_2 Fractions
+    section: Hydrogen Species H_2 Fractions
     caption: Galaxy H_$2$ fraction as a function of specific star formation rate in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyH2Fractions/Saintonge2017_abcissa_sSFR.hdf5
@@ -92,7 +92,7 @@ h2_frac_func_stellar_surface_density:
       units: "Solar_Mass / (kpc**2)"
   metadata:
     title: Stellar Mass Surface Density-H$_2$ Fraction
-    section: H_2 Fractions
+    section: Hydrogen Species H_2 Fractions
     caption: Galaxy H_$2$ fraction as a function of stellar mass surfaced density in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyH2Fractions/Saintonge2017_abcissa_mu_star.hdf5
@@ -125,7 +125,7 @@ hi_frac_func_stellar_mass:
       units: Solar_Mass
   metadata:
     title: Stellar Mass-HI Fraction
-    section: HI Fractions
+    section: Hydrogen Species HI Fractions
     caption: Galaxy HI fraction as a function of stellar mass in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyHIFractions/Catinella2018_abcissa_M_star.hdf5
@@ -157,7 +157,7 @@ hi_frac_func_ssfr:
       units: "1 / Gigayear"
   metadata:
     title: sSFR-HI Fraction
-    section: HI Fractions
+    section: Hydrogen Species HI Fractions
     caption: Galaxy HI fraction as a function of specific star formation rate in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyHIFractions/Catinella2018_abcissa_sSFR.hdf5
@@ -189,7 +189,7 @@ hi_frac_func_stellar_surface_density:
       units: "Solar_Mass / (kpc**2)"
   metadata:
     title: Stellar Mass Surface Density-HI Fraction
-    section: HI Fractions
+    section: Hydrogen Species HI Fractions
     caption: Galaxy HI fraction as a function of stellar mass surface density in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyHIFractions/Catinella2018_abcissa_mu_star.hdf5
