--- a/colibre/auto_plotter/dust_mass_function.yml
+++ b/colibre/auto_plotter/dust_mass_function.yml
@@ -3,7 +3,7 @@ dust_mass_function:
   legend_loc: "lower left"
   number_of_bins: 30
   x:
-    quantity: "derived_quantities.total_dust_masses"
+    quantity: "derived_quantities.total_dust_masses_100_kpc"
     units: Solar_Mass
     start: 1e4
     end: 1e10
