--- a/eagle-xl/auto_plotter/cold_gas_relations.yml
+++ b/eagle-xl/auto_plotter/cold_gas_relations.yml
@@ -1,4 +1,4 @@
-stellar_mass_neutral_fraction_30:
+stellar_mass_molecular_to_neutral_fraction_30:
   type: "scatter"
   legend_loc: "upper right"
   x:
@@ -7,7 +7,7 @@ stellar_mass_neutral_fraction_30:
     start: 1e7
     end: 1e12
   y:
-    quantity: "derived_quantities.gas_neutral_H_fraction_30_kpc"
+    quantity: "derived_quantities.gas_molecular_H_to_neutral_fraction_30_kpc"
     units: "dimensionless"
     start: 0.003
     end: 3.
@@ -23,12 +23,12 @@ stellar_mass_neutral_fraction_30:
       value: 1e12
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Neutral Gas Fraction (30 kpc Stellar Mass)
+    title: Stellar Mass-Molecular to Neutral Gas Fraction (30 kpc Stellar Mass)
     caption: All galaxies are included in the median line.
     section: Cold Gas Relations
     show_on_webpage: false
 
-stellar_mass_neutral_fraction_100:
+stellar_mass_molecular_to_neutral_fraction_100:
   type: "scatter"
   legend_loc: "upper right"
   x:
@@ -37,7 +37,7 @@ stellar_mass_neutral_fraction_100:
     start: 1e7
     end: 1e12
   y:
-    quantity: "derived_quantities.gas_neutral_H_fraction_100_kpc"
+    quantity: "derived_quantities.gas_molecular_H_to_neutral_fraction_100_kpc"
     units: "dimensionless"
     start: 0.003
     end: 3.
@@ -53,11 +53,11 @@ stellar_mass_neutral_fraction_100:
       value: 1e12
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Neutral Gas Fraction (100 kpc Stellar Mass)
+    title: Stellar Mass-Molecular to Neutral Gas Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line.
     section: Cold Gas Relations
 
-stellar_mass_molecular_fraction_30:
+stellar_mass_neutral_to_stellar_fraction_30:
   type: "scatter"
   legend_loc: "upper right"
   x:
@@ -66,7 +66,7 @@ stellar_mass_molecular_fraction_30:
     start: 1e7
     end: 1e12
   y:
-    quantity: "derived_quantities.gas_molecular_H_fraction_30_kpc"
+    quantity: "derived_quantities.gas_neutral_H_to_stellar_fraction_30_kpc"
     units: "dimensionless"
     start: 0.003
     end: 3.
@@ -82,12 +82,12 @@ stellar_mass_molecular_fraction_30:
       value: 1e12
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Molecular Gas Fraction (30 kpc Stellar Mass)
+    title: Stellar Mass-Neutral To Stellar Gas Fraction (30 kpc Stellar Mass)
     caption: All galaxies are included in the median line.
     section: Cold Gas Relations
     show_on_webpage: false
 
-stellar_mass_molecular_fraction_100:
+stellar_mass_neutral_to_stellar_fraction_100:
   type: "scatter"
   legend_loc: "upper right"
   x:
@@ -96,7 +96,7 @@ stellar_mass_molecular_fraction_100:
     start: 1e7
     end: 1e12
   y:
-    quantity: "derived_quantities.gas_molecular_H_fraction_100_kpc"
+    quantity: "derived_quantities.gas_neutral_H_to_stellar_fraction_100_kpc"
     units: "dimensionless"
     start: 0.003
     end: 3.
@@ -112,7 +112,66 @@ stellar_mass_molecular_fraction_100:
       value: 1e12
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Molecular Gas Fraction (100 kpc Stellar Mass)
+    title: Stellar Mass-Neutral To Stellar Gas Fraction (100 kpc Stellar Mass)
+    caption: All galaxies are included in the median line.
+    section: Cold Gas Relations
+
+stellar_mass_molecular_to_stellar_plus_molecular_fraction_30:
+  type: "scatter"
+  legend_loc: "upper right"
+  x:
+    quantity: "apertures.mass_star_30_kpc"
+    units: Solar_Mass
+    start: 1e7
+    end: 1e12
+  y:
+    quantity: "derived_quantities.gas_molecular_H_to_molecular_plus_stellar_fraction_30_kpc"
+    units: "dimensionless"
+    start: 0.003
+    end: 3.
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e7
+      units: Solar_Mass
+    end:
+      value: 1e12
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Molecular Gas To Molecular Plus Stellar Fraction (30 kpc Stellar Mass)
+    caption: All galaxies are included in the median line.
+    section: Cold Gas Relations
+    show_on_webpage: false
+
+stellar_mass_molecular_to_stellar_plus_molecular_fraction_100:
+  type: "scatter"
+  legend_loc: "upper right"
+  x:
+    quantity: "apertures.mass_star_100_kpc"
+    units: Solar_Mass
+    start: 1e7
+    end: 1e12
+  y:
+    quantity: "derived_quantities.gas_molecular_H_to_molecular_plus_stellar_fraction_100_kpc"
+    units: "dimensionless"
+    start: 0.003
+    end: 3.
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e7
+      units: Solar_Mass
+    end:
+      value: 1e12
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Molecular Gas To Molecular Plus Stellar Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line.
     section: Cold Gas Relations
 
