--- a/eagle-xl/auto_plotter/gas_fraction_plots.yml
+++ b/eagle-xl/auto_plotter/gas_fraction_plots.yml
@@ -2,7 +2,7 @@ h2_frac_func_stellar_mass:
   type: "scatter"
   legend_loc: "lower left"
   selection_mask: "derived_quantities.xcoldgass_galaxy_selection"
-  comment: r"$10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$"
+  comment: $10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
@@ -27,7 +27,7 @@ h2_frac_func_stellar_mass:
   metadata:
     title: Stellar Mass-H$_2$ Fraction
     section: Cold Gas Relations
-    caption: Galaxy H_$2$ fraction as a function of stellar mass in 0.2 dex bins, measured in 100 kpc apertures
+    caption: Galaxy H$_2$ fraction as a function of stellar mass in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyH2Fractions/Saintonge2017_abcissa_M_star.hdf5
 
@@ -35,7 +35,7 @@ h2_frac_func_ssfr:
   type: "scatter"
   legend_loc: "upper right"
   selection_mask: "derived_quantities.xcoldgass_galaxy_selection"
-  comment: r"$10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$"
+  comment: $10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$
   x:
     quantity: "derived_quantities.specific_sfr_gas_100_kpc"
     units: "1 / Gigayear"
@@ -60,7 +60,7 @@ h2_frac_func_ssfr:
   metadata:
     title: sSFR-H$_2$ Fraction
     section: Cold Gas Relations
-    caption: Galaxy H_$2$ fraction as a function of specific star formation rate in 0.2 dex bins, measured in 100 kpc apertures
+    caption: Galaxy H$_2$ fraction as a function of specific star formation rate in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyH2Fractions/Saintonge2017_abcissa_sSFR.hdf5
 
@@ -68,7 +68,7 @@ h2_frac_func_stellar_surface_density:
   type: "scatter"
   legend_loc: "lower left"
   selection_mask: "derived_quantities.xcoldgass_galaxy_selection"
-  comment: r"$10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$"
+  comment: $10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$
   x:
     quantity: "derived_quantities.mu_star_100_kpc"
     units: "Solar_Mass / (kpc**2)"
@@ -93,7 +93,7 @@ h2_frac_func_stellar_surface_density:
   metadata:
     title: Stellar Mass Surface Density-H$_2$ Fraction
     section: Cold Gas Relations
-    caption: Galaxy H_$2$ fraction as a function of stellar mass surfaced density in 0.2 dex bins, measured in 100 kpc apertures
+    caption: Galaxy H$_2$ fraction as a function of stellar mass surfaced density in 0.2 dex bins, measured in 100 kpc apertures
   observational_data:
     - filename: GalaxyH2Fractions/Saintonge2017_abcissa_mu_star.hdf5
 
@@ -101,7 +101,7 @@ hi_frac_func_stellar_mass:
   type: "scatter"
   legend_loc: "lower left"
   selection_mask: "derived_quantities.xgass_galaxy_selection"
-  comment: r"$10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$"
+  comment: $10^9 M_{\odot} < M_{\ast} < 10^{11.5} M_{\odot}$
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
