Using adaptive bin widths in eagle mfs too

--- a/eagle-xl/auto_plotter/mass_functions.yml
+++ b/eagle-xl/auto_plotter/mass_functions.yml
@@ -44,8 +44,8 @@ adaptive_stellar_mass_function_30:
     - filename: GalaxyStellarMassFunction/DSouza2015.hdf5
     - filename: GalaxyStellarMassFunction/Wright2017.hdf5
 
-stellar_mass_function_active_only_30:
-  type: "massfunction"
+adaptive_stellar_mass_function_active_only_30:
+  type: "adaptivemassfunction"
   legend_loc: "lower left"
   comment: "Active only"
   comment_loc: "lower right"
@@ -62,7 +62,7 @@ stellar_mass_function_active_only_30:
     end: 0.316 # (1e-0.5)
   metadata:
     title: Stellar Mass Function (30 kpc aperture)
-    caption: Only for active galaxies.
+    caption: Only for active galaxies, using an adaptive bin width.
     section: Stellar Mass Function
     show_on_webpage: false
   observational_data:
@@ -70,8 +70,8 @@ stellar_mass_function_active_only_30:
     - filename: GalaxyStellarMassFunction/DSouza2015.hdf5
     - filename: GalaxyStellarMassFunction/Wright2017.hdf5
 
-stellar_mass_function_passive_only_30:
-  type: "massfunction"
+adaptive_stellar_mass_function_passive_only_30:
+  type: "adaptivemassfunction"
   legend_loc: "lower left"
   comment: "Passive only"
   comment_loc: "lower right"
@@ -88,7 +88,7 @@ stellar_mass_function_passive_only_30:
     end: 0.316 # (1e-0.5)
   metadata:
     title: Stellar Mass Function (30 kpc aperture)
-    caption: Only for passive galaxies.
+    caption: Only for passive galaxies, using an adaptive bin width.
     section: Stellar Mass Function
     show_on_webpage: false
   observational_data:
@@ -141,8 +141,8 @@ adaptive_stellar_mass_function_100:
     - filename: GalaxyStellarMassFunction/DSouza2015.hdf5
     - filename: GalaxyStellarMassFunction/Wright2017.hdf5
 
-stellar_mass_function_passive_only_100:
-  type: "massfunction"
+adaptive_stellar_mass_function_passive_only_100:
+  type: "adaptivemassfunction"
   number_of_bins: 25
   legend_loc: "lower left"
   comment: "Passive only"
@@ -159,15 +159,15 @@ stellar_mass_function_passive_only_100:
     end: 0.316 # (1e-0.5)
   metadata:
     title: Stellar Mass Function (100 kpc aperture)
-    caption: Only for passive galaxies.
+    caption: Only for passive galaxies, using an adaptive bin width.
     section: Stellar Mass Function
   observational_data:
     - filename: GalaxyStellarMassFunction/LiWhite2009.hdf5
     - filename: GalaxyStellarMassFunction/DSouza2015.hdf5
     - filename: GalaxyStellarMassFunction/Wright2017.hdf5
 
-stellar_mass_function_active_only_100:
-  type: "massfunction"
+adaptive_stellar_mass_function_active_only_100:
+  type: "adaptivemassfunction"
   number_of_bins: 25
   legend_loc: "lower left"
   comment: "Active only"
@@ -184,7 +184,7 @@ stellar_mass_function_active_only_100:
     end: 0.316 # (1e-0.5)
   metadata:
     title: Stellar Mass Function (100 kpc aperture)
-    caption: Only for active galaxies.
+    caption: Only for active galaxies, using an adaptive bin width.
     section: Stellar Mass Function
   observational_data:
     - filename: GalaxyStellarMassFunction/LiWhite2009.hdf5
