Apply the same changes to COLIBRE

--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -76,11 +76,16 @@ scripts:
     title: Density of the gas heated by SNII
     section: Feedback Densities
     output_file: SNII_density_distribution.png
-  - filename: scripts/metallicity_evolution.py
-    caption: Evolution of the metal mass in gas and stars per unit co-moving volume.
-    output_file: metallicity_evolution.png
+  - filename: scripts/gas_metallicity_evolution.py
+    caption: Evolution of the metal mass in gas per unit co-moving volume.
+    output_file: gas_metallicity_evolution.png
     section: Metal Evolution
-    title: Metal Mass Density Evolution
+    title: Gas Phase Metal Mass Density Evolution
+  - filename: scripts/star_metallicity_evolution.py
+    caption: Evolution of the metal mass locked in stars per unit co-moving volume.
+    output_file: star_metallicity_evolution.png
+    section: Metal Evolution
+    title: Metal Mass Locked in Stars Density Evolution
   - filename: scripts/bh_metallicity_evolution.py
     caption: Evolution of the metal mass locked in black holes per unit co-moving volume.
     output_file: bh_metallicity_evolution.png
